Issue #23652: Make the select module compile against LSB headers. Initial patch by Matt Frank.